Fix issue with the sessions key overflowing the container
Fixed issue with the session key container-fluid overflowing when breakpoint > 1200px

--- a/web/css/joindin.css
+++ b/web/css/joindin.css
@@ -13,6 +13,7 @@ body {
     padding-right: 10px;
 }
 .container-fluid {
+    max-width: 100%;
     padding-left: 10px;
     padding-right: 10px;
 }
